Antes de cambiar clave a hex
