# openapi/user-api.yaml
@@ -5,7 +5,7 @@ info:
   description: CRUD API for managing users
 
 servers:
-  - url: http://localhost:8080/api
+  - url: http://localhost:8080/
 
 paths:
   /users:
@@ -55,12 +55,33 @@ paths:
           schema:
             type: string
       responses:
-        '202':
+        '200':
           description: User found
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/UserResponse'
+
+  /users/me/role:
+    get:
+      summary: Get current user's role
+      operationId: getMyRole
+      tags:
+        - User
+
+      responses:
+        '200':
+          description: Successfully retrieved current user's role
+          content:
+            application/json:
+              schema:
+                type: string
+                enum: [ROLE_ADMIN, ROLE_USER, ROLE_WORKER, ROLE_MANAGER]
+                example: ROLE_USER
+        '401':
+          $ref: '#/components/responses/UnauthorizedError'
+      security:
+        - BearerAuth: []
 
     patch:
       summary: Update user fields
@@ -131,11 +152,18 @@ paths:
                 properties:
                   token:
                     type: string
-                  role:
-                    type: string
         '401':
           description: Invalid credentials
 components:
+  securitySchemes:
+    BearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
+  responses:
+    UnauthorizedError:
+      description: Missing or invalid authentication
+
   schemas:
     UserRequest:
       type: object
@@ -200,9 +228,9 @@ components:
           type: string
         created:
           type: string
-          format: date-time
         lastModified:
           type: string
-          format: date-time
         modifiedBy:
           type: string
+
+
